{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 1455,
  "lineage": "86af2df6-299e-ec12-8b71-01dfed063e5e",
  "resources": [
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02dab87f87740979b",
            "association_id": "eipassoc-039a394baccb4cdf4",
            "domain": "vpc",
            "id": "eipalloc-02dab87f87740979b",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0d21bdba05295f5ff",
            "private_dns": "ip-20-0-0-13.us-east-2.compute.internal",
            "private_ip": "20.0.0.13",
            "public_dns": "ec2-3-18-243-224.us-east-2.compute.amazonaws.com",
            "public_ip": "3.18.243.224",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "foundry-nat-default"
            },
            "tags_all": {
              "Name": "foundry-nat-default"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "foundry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:373055206579:internet-gateway/igw-00ab7d8b81c34226c",
            "id": "igw-00ab7d8b81c34226c",
            "owner_id": "373055206579",
            "tags": {
              "Name": "foundry-gateway-default"
            },
            "tags_all": {
              "Name": "foundry-gateway-default"
            },
            "vpc_id": "vpc-02bbe7e2d5bc3e2c3"
          },
          "dependencies": [
            "module.foundry_server.aws_vpc.foundry"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_lb",
      "name": "foundry_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:373055206579:loadbalancer/app/foundry-server-default/176a21d9828e39c4",
            "arn_suffix": "app/foundry-server-default/176a21d9828e39c4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "foundry-server-default-1018793718.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:373055206579:loadbalancer/app/foundry-server-default/176a21d9828e39c4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "foundry-server-default",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dbfc96e6f194fd94"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02540fd11627cb9b0"
              },
              {
                "subnet_id": "subnet-0860e20070ef3e20b"
              }
            ],
            "subnets": [
              "subnet-02540fd11627cb9b0",
              "subnet-0860e20070ef3e20b"
            ],
            "vpc_id": "vpc-02bbe7e2d5bc3e2c3",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.foundry_server.aws_internet_gateway.foundry",
            "module.foundry_server.aws_security_group.foundry_load_balancer",
            "module.foundry_server.aws_subnet.foundry_publics",
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "foundry_server_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:373055206579:listener/app/foundry-server-default/176a21d9828e39c4/1b9d044b4d610ca2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:373055206579:targetgroup/foundry-server-default-http-tg/7fb54f5bc2a2e9fe",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:373055206579:listener/app/foundry-server-default/176a21d9828e39c4/1b9d044b4d610ca2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:373055206579:loadbalancer/app/foundry-server-default/176a21d9828e39c4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_internet_gateway.foundry",
            "module.foundry_server.aws_lb.foundry_server",
            "module.foundry_server.aws_lb_target_group.lb_foundry_server_http",
            "module.foundry_server.aws_security_group.foundry_load_balancer",
            "module.foundry_server.aws_security_group_rule.lb_allow_inbound_80",
            "module.foundry_server.aws_subnet.foundry_publics",
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "foundry_server_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:373055206579:listener/app/foundry-server-default/176a21d9828e39c4/3f3419f45062bcfb",
            "certificate_arn": "arn:aws:acm:us-east-2:373055206579:certificate/6c8e2d05-9176-4a21-89c8-167c94151c7f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:373055206579:targetgroup/foundry-server-default-https-tg/4c9420dd1cf74653",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:373055206579:listener/app/foundry-server-default/176a21d9828e39c4/3f3419f45062bcfb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:373055206579:loadbalancer/app/foundry-server-default/176a21d9828e39c4",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_internet_gateway.foundry",
            "module.foundry_server.aws_lb.foundry_server",
            "module.foundry_server.aws_lb_target_group.lb_foundry_server_https",
            "module.foundry_server.aws_security_group.foundry_load_balancer",
            "module.foundry_server.aws_security_group_rule.lb_allow_inbound_443",
            "module.foundry_server.aws_subnet.foundry_publics",
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_foundry_server_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:373055206579:targetgroup/foundry-server-default-http-tg/7fb54f5bc2a2e9fe",
            "arn_suffix": "targetgroup/foundry-server-default-http-tg/7fb54f5bc2a2e9fe",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:373055206579:targetgroup/foundry-server-default-http-tg/7fb54f5bc2a2e9fe",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "foundry-server-default-http-tg",
            "port": 30000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02bbe7e2d5bc3e2c3"
          },
          "dependencies": [
            "module.foundry_server.aws_internet_gateway.foundry",
            "module.foundry_server.aws_lb.foundry_server",
            "module.foundry_server.aws_security_group.foundry_load_balancer",
            "module.foundry_server.aws_subnet.foundry_publics",
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb_foundry_server_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:373055206579:targetgroup/foundry-server-default-https-tg/4c9420dd1cf74653",
            "arn_suffix": "targetgroup/foundry-server-default-https-tg/4c9420dd1cf74653",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:373055206579:targetgroup/foundry-server-default-https-tg/4c9420dd1cf74653",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "foundry-server-default-https-tg",
            "port": 30000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02bbe7e2d5bc3e2c3"
          },
          "dependencies": [
            "module.foundry_server.aws_internet_gateway.foundry",
            "module.foundry_server.aws_lb.foundry_server",
            "module.foundry_server.aws_security_group.foundry_load_balancer",
            "module.foundry_server.aws_subnet.foundry_publics",
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "foundry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02dab87f87740979b",
            "connectivity_type": "public",
            "id": "nat-0e9e565730a337187",
            "network_interface_id": "eni-0d21bdba05295f5ff",
            "private_ip": "20.0.0.13",
            "public_ip": "3.18.243.224",
            "subnet_id": "subnet-02540fd11627cb9b0",
            "tags": {
              "Name": "foundry-nat-default"
            },
            "tags_all": {
              "Name": "foundry-nat-default"
            }
          },
          "dependencies": [
            "module.foundry_server.aws_eip.nat",
            "module.foundry_server.aws_subnet.foundry_publics",
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_route",
      "name": "foundry_internet_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00ab7d8b81c34226c",
            "id": "r-rtb-0f2ce02fd4b19d07a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2ce02fd4b19d07a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_internet_gateway.foundry",
            "module.foundry_server.aws_route_table.foundry_public",
            "module.foundry_server.aws_vpc.foundry"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_route",
      "name": "foundry_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0407cc0c87b2d2af91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e9e565730a337187",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0407cc0c87b2d2af9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_eip.nat",
            "module.foundry_server.aws_nat_gateway.foundry",
            "module.foundry_server.aws_route_table.foundry_private",
            "module.foundry_server.aws_subnet.foundry_publics",
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "foundry_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:373055206579:route-table/rtb-0407cc0c87b2d2af9",
            "id": "rtb-0407cc0c87b2d2af9",
            "owner_id": "373055206579",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e9e565730a337187",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "foundry-private-default"
            },
            "tags_all": {
              "Name": "foundry-private-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bbe7e2d5bc3e2c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_vpc.foundry"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "foundry_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:373055206579:route-table/rtb-0f2ce02fd4b19d07a",
            "id": "rtb-0f2ce02fd4b19d07a",
            "owner_id": "373055206579",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00ab7d8b81c34226c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "foundry-public-default"
            },
            "tags_all": {
              "Name": "foundry-public-default"
            },
            "timeouts": null,
            "vpc_id": "vpc-02bbe7e2d5bc3e2c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_vpc.foundry"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7981394b3f3c098",
            "route_table_id": "rtb-0407cc0c87b2d2af9",
            "subnet_id": "subnet-05b8e29dc3156c2ea"
          },
          "dependencies": [
            "module.foundry_server.aws_route_table.foundry_private",
            "module.foundry_server.aws_subnet.foundry_privates",
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6f42d106f810127",
            "route_table_id": "rtb-0407cc0c87b2d2af9",
            "subnet_id": "subnet-0fb749845945c2b85"
          },
          "dependencies": [
            "module.foundry_server.aws_route_table.foundry_private",
            "module.foundry_server.aws_subnet.foundry_privates",
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048c569c8f5f3c7ab",
            "route_table_id": "rtb-0f2ce02fd4b19d07a",
            "subnet_id": "subnet-02540fd11627cb9b0"
          },
          "dependencies": [
            "module.foundry_server.aws_route_table.foundry_public",
            "module.foundry_server.aws_subnet.foundry_publics",
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a5a4451420ba69d",
            "route_table_id": "rtb-0f2ce02fd4b19d07a",
            "subnet_id": "subnet-0860e20070ef3e20b"
          },
          "dependencies": [
            "module.foundry_server.aws_route_table.foundry_public",
            "module.foundry_server.aws_subnet.foundry_publics",
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "foundry_data_mount",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:373055206579:security-group/sg-0d6321e5e1585ef4c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0d6321e5e1585ef4c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-081690a70c09ea2a5"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "foundry-data-mount-sg-default20221110160743244600000003",
            "name_prefix": "foundry-data-mount-sg-default",
            "owner_id": "373055206579",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02bbe7e2d5bc3e2c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_vpc.foundry"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "foundry_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:373055206579:security-group/sg-0dbfc96e6f194fd94",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-081690a70c09ea2a5"
                ],
                "self": false,
                "to_port": 30000
              }
            ],
            "id": "sg-0dbfc96e6f194fd94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "foundry-lb-sg-default20221110160743884100000004",
            "name_prefix": "foundry-lb-sg-default",
            "owner_id": "373055206579",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02bbe7e2d5bc3e2c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_internet_gateway.foundry",
            "module.foundry_server.aws_vpc.foundry"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "foundry_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:373055206579:security-group/sg-081690a70c09ea2a5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-081690a70c09ea2a5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dbfc96e6f194fd94"
                ],
                "self": false,
                "to_port": 30000
              }
            ],
            "name": "foundry-server-sg-default20221110160743244200000002",
            "name_prefix": "foundry-server-sg-default",
            "owner_id": "373055206579",
            "revoke_rules_on_delete": true,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02bbe7e2d5bc3e2c3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_vpc.foundry"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_foundry_port_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 30000,
            "id": "sgrule-2013492666",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-081690a70c09ea2a5",
            "self": false,
            "source_security_group_id": "sg-0dbfc96e6f194fd94",
            "timeouts": null,
            "to_port": 30000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_internet_gateway.foundry",
            "module.foundry_server.aws_security_group.foundry_load_balancer",
            "module.foundry_server.aws_security_group.foundry_server",
            "module.foundry_server.aws_vpc.foundry"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1284253788",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-081690a70c09ea2a5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_security_group.foundry_server",
            "module.foundry_server.aws_vpc.foundry"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "foundry_data_mount_allow_nfs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 2049,
            "id": "sgrule-193912693",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d6321e5e1585ef4c",
            "self": false,
            "source_security_group_id": "sg-081690a70c09ea2a5",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_security_group.foundry_data_mount",
            "module.foundry_server.aws_security_group.foundry_server",
            "module.foundry_server.aws_vpc.foundry"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "foundry_data_mount_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3584391049",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d6321e5e1585ef4c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_security_group.foundry_data_mount",
            "module.foundry_server.aws_vpc.foundry"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_allow_foundry_port_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 30000,
            "id": "sgrule-3262464779",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dbfc96e6f194fd94",
            "self": false,
            "source_security_group_id": "sg-081690a70c09ea2a5",
            "timeouts": null,
            "to_port": 30000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_internet_gateway.foundry",
            "module.foundry_server.aws_security_group.foundry_load_balancer",
            "module.foundry_server.aws_security_group.foundry_server",
            "module.foundry_server.aws_vpc.foundry"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_allow_inbound_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-3235605663",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dbfc96e6f194fd94",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_internet_gateway.foundry",
            "module.foundry_server.aws_security_group.foundry_load_balancer",
            "module.foundry_server.aws_vpc.foundry"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb_allow_inbound_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3787238552",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0dbfc96e6f194fd94",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.foundry_server.aws_internet_gateway.foundry",
            "module.foundry_server.aws_security_group.foundry_load_balancer",
            "module.foundry_server.aws_vpc.foundry"
          ]
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "foundry_privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:373055206579:subnet/subnet-05b8e29dc3156c2ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "20.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b8e29dc3156c2ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373055206579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foundry-private-0-default"
            },
            "tags_all": {
              "Name": "foundry-private-0-default"
            },
            "vpc_id": "vpc-02bbe7e2d5bc3e2c3"
          },
          "dependencies": [
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:373055206579:subnet/subnet-0fb749845945c2b85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "20.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb749845945c2b85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373055206579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foundry-private-1-default"
            },
            "tags_all": {
              "Name": "foundry-private-1-default"
            },
            "vpc_id": "vpc-02bbe7e2d5bc3e2c3"
          },
          "dependencies": [
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "foundry_publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:373055206579:subnet/subnet-02540fd11627cb9b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "20.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02540fd11627cb9b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373055206579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foundry-public-0-default"
            },
            "tags_all": {
              "Name": "foundry-public-0-default"
            },
            "vpc_id": "vpc-02bbe7e2d5bc3e2c3"
          },
          "dependencies": [
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:373055206579:subnet/subnet-0860e20070ef3e20b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "20.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0860e20070ef3e20b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "373055206579",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "foundry-public-1-default"
            },
            "tags_all": {
              "Name": "foundry-public-1-default"
            },
            "vpc_id": "vpc-02bbe7e2d5bc3e2c3"
          },
          "dependencies": [
            "module.foundry_server.aws_vpc.foundry",
            "module.foundry_server.data.aws_region.current"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.foundry_server",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "foundry",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:373055206579:vpc/vpc-02bbe7e2d5bc3e2c3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/22",
            "default_network_acl_id": "acl-083dd692ccd4e5597",
            "default_route_table_id": "rtb-06cf9f18c2e0a6f48",
            "default_security_group_id": "sg-0d2498353e8cbdd7a",
            "dhcp_options_id": "dopt-0e60b209f55ab6a03",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02bbe7e2d5bc3e2c3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06cf9f18c2e0a6f48",
            "owner_id": "373055206579",
            "tags": {
              "Name": "foundry-default"
            },
            "tags_all": {
              "Name": "foundry-default"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}